fix(css): improve text readability
- Improve text readability

--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ a::selection {
 }
 
 button {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
   /* letter-spacing: 0.05ex; */
   font-weight: 500;
 }
